medicines/api/infrastructure/non-prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: api
  name: api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        env: non-prod
    spec:
      containers:
        - image: ../../Dockerfile
          name: api
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
